Dashboard was not using auto-detection of TLS.